welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: '<-' expected but ')' found.
for ( i< - 1 to 6) {
                 ^Program:13: error: illegal start of simple expression
}
^